[gd_scene load_steps=5 format=3 uid="uid://bri4l7ve7oyby"]

[ext_resource type="Script" path="res://title_screen/title_screen.gd" id="1_feukj"]
[ext_resource type="Texture2D" uid="uid://3yl72xhe3oua" path="res://title_screen/main_menu.png" id="1_kf7l7"]
[ext_resource type="Texture2D" uid="uid://ctpaw8igsoq0f" path="res://title_screen/start_game_button.png" id="2_xn8yc"]
[ext_resource type="AudioStream" uid="uid://bp6jn7tdc6ne5" path="res://title_screen/bananas.mp3" id="4_nr7tr"]

[node name="TitleScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_feukj")

[node name="Logo" type="Sprite2D" parent="."]
texture_filter = 1
position = Vector2(608, 328)
scale = Vector2(5.5, 5.5)
texture = ExtResource("1_kf7l7")

[node name="StartGame" type="TextureButton" parent="."]
texture_filter = 1
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -208.0
offset_top = -88.0
offset_right = -80.0
offset_bottom = -72.0
grow_horizontal = 2
grow_vertical = 0
scale = Vector2(5.25, 5.25)
texture_normal = ExtResource("2_xn8yc")

[node name="Flash" type="Timer" parent="."]
wait_time = 0.5
autostart = true

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_nr7tr")
volume_db = -15.0
autoplay = true

[connection signal="mouse_entered" from="StartGame" to="." method="_on_start_game_mouse_entered"]
[connection signal="mouse_exited" from="StartGame" to="." method="_on_start_game_mouse_exited"]
[connection signal="pressed" from="StartGame" to="." method="_on_start_game_pressed"]
[connection signal="timeout" from="Flash" to="." method="_on_flash_timeout"]
